# osslsigncode

./: CMakeLists.txt  CMakePresets.json  helpers.c  osslsigncode.c  osslsigncode.h
tests/files/: in.p7b  out.p7b
utils/: CMakeLists.txt  p7b_append_cert.cc  set_p7b_sig.cc
